fix(cors,auth): allow all origin patterns and default auth.bypass-firebase to true to resolve Failed to fetch errors